Banner and information section done css

--- a/resources/style.css
+++ b/resources/style.css
@@ -7,6 +7,10 @@ h2{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 3em;
 }
+h3 {
+    font-size: 2em;
+    color: rgb(70, 69, 69);
+}
 .header{
     display: flex;
     align-items: center;
@@ -22,31 +26,49 @@ h2{
 
 .navigation{
     flex: 50%;
+
+}
+.navigation li a {
+    text-decoration: none;
+    font-size: 1.2em;
+    color:gray ;
+    font-weight: 600;
+  
+    
 }
 .navigation ul {
     display: flex;
+    text-decoration: none;  
+    list-style:none;
+    padding:0 16px 0 0;
+    margin-right: 8px;
 }
 .navigation li {
     margin: 0 16px;
 }
+
 .banner{
     background-color: lightgray;
     padding: 32px 24px;
     display: flex;
     align-items: center;
+
 }
-.image {
-    flex:50%;
-  display: contents;
-  margin-right: 24px;
+.banner-image {
+flex: 60%;
+overflow: hidden;
+
+}
+.banner-image img{
+   object-fit: cover;
+   width: 100%;
+    }
+.banner-info{
+    flex: 40%;
+    overflow: hidden; 
+     padding-left: 24px;
 }
 
-.image img{
-  width: 60%; 
-}
-.info{
-    padding-left: 24px;
-}
 .info p {
     font-size: 1.5em;
     font-weight:lighter;
@@ -65,4 +87,87 @@ h2{
     text-decoration: none;
 
 }
+ .information{
+    display:flex;
+    padding: 32px 24px;
+} 
+.information-span{
+    flex: 60%;
+    overflow: hidden;
+    padding-right:  24px;
+}
+.information-span img {
+    object-fit: cover;
+     width: 100%;
+     margin-bottom: 32px;
+}
+.text-info h2{
+    margin: 0 0 24px 0;
+    font-size: 2.6em  
+}
+.text-info p {
+    padding: 0 0 32px 0;
+}
+.information-data{
+    flex-direction: column;
+    flex: 40%;
+    display: flex;
+    
+}
+
+.orientation-date h3 {
+   display: block;
+}
+.info-img{
+    flex: 35%;
+}
+
+.info-img img {
+    width: 100%;
+    height: auto;
+}
+
+.info-box{
+    flex: 65%;
+    text-align: start;
+    padding-left: 16px;
+}
+.info-box p {
+    font-weight: 500;
+    color: rgb(82, 80, 80);
+    font-size: 1.1em;
+}
+.info-box h3, p {
+    margin: 0;
+    padding: 8px;
+}
+.guest-lecture {
+    background-color: lightgray;
+}
+
+
+
+/* Genereal styles */
+.border {
+    border-style:solid;
+    border-width: 2px;
+   padding: 16px;
+   border-color: lightgray;
+
+}
+.box{
+    display: flex;
+    flex-direction: row;
+}
+.box img {
+    height: auto;
+}
+.read-more a {
+    font-size: 1.2em;
+    color: rgb(47, 70, 242);
+    text-decoration: none;
+}
+
+
+
 
