--- a/resources/style.css
+++ b/resources/style.css
@@ -87,7 +87,7 @@ overflow: hidden;
     text-decoration: none;
 
 }
- .information{
+ .information, .thesis{
     display:flex;
     padding: 32px 24px;
 } 
@@ -188,23 +188,58 @@ overflow: hidden;
     font-weight: lighter;
     color:gray;
 }
-.thesis{
-    display: flex;
-    flex-direction: column;
-}
+
 .thesis-title{
     text-align: center;
 }
+.thesis{
+    margin: 32px 0;
+}
 .thesis-video{
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+    flex: 60%;
+    overflow: hidden;
+    padding: 0 24px;
+    
 }
 .video{
     width: 100%;
     height: auto;
+    
+}
+.fisma-now{
+    flex: 40%;
 }
 
+.fisma{
+    display: flex;
+    flex-direction: row;
+    background-color: lightgray;
+    padding: 16px;
+    
+}
+.fisma-img, .now-img{
+    flex: 35%;
+    height: auto;
+    overflow: hidden;
+    object-fit: cover;
+    margin-right: 16px;
+}
+.fisma-info, .now-info{
+    flex: 65%;
+} 
+.now-and-then{
+    display: flex;
+    margin-top: 16px;
+    
+}
+.footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 576px) {
+  
+  }
 
 
 /* Genereal styles */
