--- a/resources/style.css
+++ b/resources/style.css
@@ -14,6 +14,10 @@ h3 {
     color: rgb(70, 69, 69);
 }
 /* Genereal styles */
+.white {
+    color: darkgray;
+    font-weight: 100;
+}
 .border {
     border-style: solid;
     border-width: 2px;
@@ -52,6 +56,9 @@ h3 {
     flex: 50%;
     display: flex;
     margin-left: 24px;
+}
+.logo img {
+    width: 4%;
 }
 
 .mobile {
@@ -310,7 +317,7 @@ p {
     justify-content: space-between;
 }
 
-@media only screen and (min-width: 320px) and (max-width: 576px) {
+@media only screen and (min-width: 320px) and (max-width: 950px) {
  .img-mobile{
     display: flex;
  }
@@ -398,6 +405,9 @@ p {
     display: none;
 }
 .thesis{
+    padding: 0;
+}
+.thesis-video{
     padding: 0;
 }
 }
